# aiofile

./: .dockerignore  .drone.yml  .gitignore  .travis.yml  LICENCE  MANIFEST.in  Makefile  README.md  README.rst  pylama.ini  pylava.ini  pyproject.toml  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish.yml  tests.yml  tox.yml
aiofile/: __init__.py  _aio.pyi  _aio.pyx  _thread.py  aio.c  aio.pxd  aio.py  aio.pyi  aio.pyx  posix_aio.pyx  thread_aio.py  utils.py  version.py
benchmark/: benchmark.py  requirements.txt
benchmarks/: perf-check.py
scripts/: make-wheels.sh
tests/: __init__.py  conftest.py  impl.py  test_aio.py  test_thread_aio.py
tests/test_py35/: test_aio.py  test_thread_aio.py
