[project]
name = "aiofile"
version = "3.9.0"
description = "Asynchronous file operations."
license = "Apache-2.0"
authors = [
    {name = "Dmitry Orlov", email = "me@mosquito.su"},
]
readme = "README.md"
keywords = ["aio", "python", "asyncio", "fileio", "io"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Natural Language :: Russian",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
    "Topic :: System",
    "Topic :: System :: Operating System",
]
requires-python = ">=3.10"
dependencies = [
    "caio~=0.9.0",
]

[project.urls]
Homepage = "https://github.com/mosquito/aiofile"

[dependency-groups]
dev = [
    "markdown-pytest>=0.3.2,<0.4",
    "pytest>=8.2.0,<8.3.0",
    "aiomisc-pytest>=1.2.1,<2",
    "pytest-cov>=5.0.0,<6",
    "coveralls<4",
    "pylama>=8.4.1,<9",
    "setuptools>=75.1.0,<76",
    "mypy>=1.11.2,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "aiofile/",
    "tests/",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "silent"
no_implicit_reexport = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
files = [
    "aiofile",
    "tests",
]

[[tool.mypy.overrides]]
module = ["tests.*"]
check_untyped_defs = true
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = false
warn_unused_ignores = false

[tool.pylama]
skip = ["*env*", ".*", "*build*"]

[tool.pylama.pycodestyle]
max_line_length = 80
