[project]
name = "aiofile"
version = "3.9.0"
description = "Asynchronous file operations."
license = "Apache-2.0"
authors = [
    {name = "Dmitry Orlov", email = "me@mosquito.su"},
]
readme = "README.md"
keywords = ["aio", "python", "asyncio", "fileio", "io"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Natural Language :: Russian",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
    "Topic :: System",
    "Topic :: System :: Operating System",
]
requires-python = ">=3.11"
dependencies = [
    "caio~=0.9.0",
]

[project.urls]
Homepage = "https://github.com/mosquito/aiofile"

[dependency-groups]
dev = [
    "markdown-pytest>=0.3.2,<0.4",
    "pytest>=8.4",
    "aiomisc-pytest>=2.0.0,<3",
    "pytest-cov>=5.0.0,<6",
    "coveralls<4",
    "ruff>=0.15",
    "ty>=0.0.37",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "aiofile/",
    "tests/",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "W"]
